hphp/hack/test/typecheck/global_const2.php.exp
File "global_const2.php", line 3, characters 7-9:
This is an int (Typing[4110])
File "global_const2.php", line 3, characters 15-21:
It is incompatible with an empty array
