hphp/hack/test/typecheck/global_const2.php
<?hh

const int X = varray[];
